Adjusted config values