@@ -1,40 +1,16 @@
--ea
 -server
 -Xms2G
--Xmx4G
--Xss2m
--XX:MaxMetaspaceSize=350m
--XX:ReservedCodeCacheSize=225m
--XX:MetaspaceSize=512m
--XX:+DoEscapeAnalysis
--XX:+UseCompressedOops
--XX:+UnlockExperimentalVMOptions
+-Xmx6G
+-Xss16m
 -XX:+UseConcMarkSweepGC
--XX:LargePageSizeInBytes=256m
--XX:ReservedCodeCacheSize=96m
--XX:+UseCodeCacheFlushing
+-XX:+CMSParallelRemarkEnabled
+-XX:ConcGCThreads=4
+-XX:ReservedCodeCacheSize=256m
+-XX:+AlwaysPreTouch
+-XX:+TieredCompilation
 -XX:+UseCompressedOops
--XX:ParallelGCThreads=4
--XX:+UseParNewGC
--XX:+UseConcMarkSweepGC
--XX:+DisableExplicitGC
--XX:+ExplicitGCInvokesConcurrent
--XX:+PrintGCDetails 
--XX:+PrintFlagsFinal
--XX:+AggressiveOpts
--XX:+HeapDumpOnOutOfMemoryError
--XX:+CMSClassUnloadingEnabled
--XX:+CMSPermGenSweepingEnabled 
--XX:CMSInitiatingOccupancyFraction=60
--XX:+CMSClassUnloadingEnabled
--XX:+CMSParallelRemarkEnabled 
--XX:+UseAdaptiveGCBoundary
--XX:+UseSplitVerifier 
--XX:CompileThreshold=10000 
--XX:+UseCompressedStrings 
--XX:+OptimizeStringConcat
--XX:+UseStringCache 
--XX:+UseFastAccessorMethods  
--XX:+UnlockDiagnosticVMOptions
--XX:+HeapDumpOnOutOfMemoryError
--XX:+UseCompressedOops -agentlib:yjpagent=probe_disable=*,disablealloc,disabletracing,onlylocal,disableexceptiontelemetry,delay=10000,sessionname=IntelliJIdea14
+-XX:SoftRefLRUPolicyMSPerMB=50
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-Djsse.enableSNIExtension=false
+-ea
